@@ -2,6 +2,7 @@
 Version: 5.2.3
 Date: ????
   Changes:
+    - Don't show Space Exploration's grounded versions of buildings
 ---------------------------------------------------------------------------------------------------
 Version: 5.2.2
 Date: 2020-12-05
